# school-stuff

./: .gitignore  README.md
cours/Maths/: .condensé de 1ere.tex.swp
cours/Physique/: [12]Etats_physiques.tex  [13]Conservation_energie.tex  [14]Ressources_énergétiques.tex
cours/SI/: Cinématique.tex  TD Mouvement circulaire adaptation vitesse.doc
cours/english/: Untitled.adoc
cours/francais/: fiche-complete-francais.md
cours/isn/: repr_nombres.md
cours/physique/: .template.tex
cours/russkaia/: verbe-avoir.adoc
cours/sciences-de-l-ingenieur/: .~lock.TD Mouvement circulaire adaptation vitesse.doc#  Act 10-18.doc  TD Mouvement circulaire adaptation vitesse_corrigé.doc
exos/Français/: entrainement-bac-ecrit.md
exos/english/: exos-rentrée-prépa.md  exos-rentrée-prépa.txt
exos/isn/: boeing737.py  dm_1.py  ds1.py  instructions_iteratives.py  kmp
exos/isn/tp/: TP1.py  TP2 etudiants.py  alors_oui_bon_booooh.py  gauss.py  pyproject.toml  settings.ini  tp1réponses.md  tp2exercices.py  tp_3_boucles_et_listes.py  tp_4_codage.py  tp_5.py
exos/isn/tp/BDD/: mondial-mysql.sql  mondial-sqlite3.sqlite
exos/maths/: .template.tex  ordre-supérieur-2-3.tex  toussaint.tex
exos/physique/: .template.tex  exos-revision.txt
exos/si-meca/: .template.tex
exos/русский/: 2020-05-(28+25).md
fiches/: README.md
fiches/francais/: dissert_mpsi_methodo.md  dissert_mpsi_methodo.yaml
fiches/français/: fiche-abbreviations-procedes-francais.md  fiche-complete-francais.html  fiche-complete-francais.md  todo.md
fiches/maths/: condense-de-mpsi.tex  condense-de-terminale.tex  (+1 more)
(+132 files in other folders)
