[tool.poetry]
name = "tp"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
rich = "^9.10.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
nbdev = "^1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
